samples/_failures_safe/1761409430_46265b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e622fbc0.c: In function ‘main’:
./samples/SAFE/__tmp_e622fbc0.c:158:26: error: missing terminating " character
  158 |     mat2.cols = read_int("Columns (1-10
      |                          ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_e622fbc0.c:158:5: error: expected expression at end of input
  158 |     mat2.cols = read_int("Columns (1-10
      |     ^~~~
./samples/SAFE/__tmp_e622fbc0.c:158:17: error: too few arguments to function ‘read_int’
  158 |     mat2.cols = read_int("Columns (1-10
      |                 ^~~~~~~~
./samples/SAFE/__tmp_e622fbc0.c:20:5: note: declared here
   20 | int read_int(const char* prompt, int min_val, int max_val) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_e622fbc0.c:158:5: error: expected declaration or statement at end of input
  158 |     mat2.cols = read_int("Columns (1-10
      |     ^~~~
